# trend_attention

./: pyproject.toml
src/trend_attention/: __init__.py  modeling.py
tests/: background.ipynb  config.json  config.yaml  modeling.ipynb
tests/trained_model/: config.yaml  model.pth
